Fix header on mobile

--- a/style.css
+++ b/style.css
@@ -120,9 +120,11 @@ padding-top: 20px;
 	text-decoration:underline;
 }
 
-.site-header {
-    padding-top: 0px;
-} 
+@media (min-width:600px) {
+	.site-header {
+    		padding-top: 0px;
+	}
+}
 
 
 
